syntax = "proto3";

option java_package = "com.example.demo.protobuf";

message MessageRequest {
    string message = 1;
}

message MessageResponse {
    string message = 1;
}

service HelloService {
    rpc Hello (MessageRequest) returns (MessageResponse) {}
}
